--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if IE 7 ]> <html class="ie ie7"> <![endif]-->
 <!--[if IE 8 ]> <html class="ie ie8"> <![endif]-->
@@ -16,7 +15,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="author" lang="fr" content="signer">
 
-	<title>UXD, Visual and Graphic Designer - /signer - Paris</title>
+	<title>UXD, Visual, DCI and Interaction Designer - /signer - Paris</title>
 
 	<link rel="shortcut icon" href="ico/favicon.ico">
 	<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
@@ -31,9 +30,9 @@
 	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="ico/apple-icon-152x152.png">
 	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="ico/apple-icon-180x180.png">
 	<link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
-  
+
 	<meta name="description" content="UI/Visual Design, graphic designer - Paris">
-	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C R3D... ">
+	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... ">
 	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css">
 
 	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
@@ -53,8 +52,9 @@
 	<!--
 	      POESIES III
 	      Current project writing and production.
-              Digital Cinema Industry
-	      Interaction Design, Typography, Literature...
+	      Processing: abstract letters, texts, videos (26)...
+              Digital Cinema
+	      Interaction Design, Motion Graphics, Typography, Literature...
 	      -->
 	<!--  TODO CONTENT -->
 	<!--  TODO CONTENT  /Responsive Design + compass @import "compass/css3, typography"..., animation, content vimeo... -->
