--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if IE 7 ]> <html class="ie ie7"> <![endif]-->
 <!--[if IE 8 ]> <html class="ie ie8"> <![endif]-->
@@ -183,6 +184,35 @@
 </section>
 
 <section id="s-sign">
+	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+
+	      <figure><h1>01</h1></figure>
+	      <article>
+			       <h2>01</h2>
+	      </article>
+        </aside>
+
+   <aside id="sec-s-sign" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+
+     <figure><h1>01</h1></figure>
+     <article>
+          <h2>01</h2>
+     </article>
+
+        <article role="article" id="desc-s-sign" class="text">
+            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+            </p>
+            <p><img class="motif" src="images/motif.png" alt="Sun"></p>
+        </article>
+         <article role="article" class="blanc">
+             <p>master juillet project 23/25 <br />
+             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
+             </p>
+         </article>
+	</aside>
+</section>
 
 <section id="s-text" class="tab_content">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
@@ -266,7 +296,7 @@
     <article role="article" id="desc-s-video" class="text">
         <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
         </p>
-        <p><img class="motif" src="images/motif.png" alt="Sun"></p>
+         <p><img class="motif" src="images/motif.png" alt="Sun"></p>
     </article>
      <article role="article" class="blanc">
          <p>master juillet project 23/25 <br />
@@ -277,11 +307,11 @@
      </article>
 	</aside>
 </section>
+
 	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
-	<script src="scripts/video.js" type="text/javascript"></script> 
-    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e89c73a07e624b6f991a6bb6805343f4"}'></script><!-- End Cloudflare Web Analytics -->    
+	<script src="scripts/video.js" type="text/javascript"></script>
 
 </body>
 </html>
