--- a/index.html
+++ b/index.html
@@ -182,7 +182,6 @@
 		</ul>
 	  </nav>
 </section>
-
 <section id="s-sign">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
@@ -203,7 +202,7 @@
             <h3>master juillet</h3>
             <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
             </p>
-            <p><img class="motif" src="images/motif.png" alt="Sun"></p>
+            <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
         </article>
          <article role="article" class="blanc">
              <h4>master juillet project 23/25</h4>
@@ -236,7 +235,7 @@
             <h3>master juillet</h3>
             <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
             </p>
-            <p><img class="motif" src="images/motif.png" alt="Sun"></p>
+            <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
         </article>
          <article role="article" class="blanc">
              <h4>master juillet project 23/25</h4>
@@ -269,7 +268,7 @@
             <h3>master juillet</h3>
             <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
             </p>
-            <p><img class="motif" src="images/motif.png" alt="Sun"></p>
+            <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
         </article>
          <article role="article" class="blanc">
              <h4>master juillet project 23/25</h4>
@@ -302,7 +301,7 @@
         <h3>master juillet</h3>
         <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
         </p>
-        <p><img class="motif" src="images/motif.png" alt="Sun"></p>
+        <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
     </article>
      <article role="article" class="blanc">
          <h4>master juillet project 23/25</h4>
@@ -314,6 +313,7 @@
      </article>
 	</aside>
 </section>
+
 	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
