--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 				<a href="#content" id="texts" class="texts">text</a></li>
 			<li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">liter</a>
 				<a href="#s-liter" id="liters" class="liters">liter</a></li>
-			<li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">films</a>
-				<a href="#s-video" id="vids" class="vids">films</a></li>
+			<li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">film</a>
+				<a href="#s-video" id="vids" class="vids">film</a></li>
 		</ul>
 	  </nav>
 </section>
