--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
 
 	<meta name="description" content="UI/Visual Design, graphic designer - Paris">
-	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, functions, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... ">
+	<meta name="keywords" content="UI/Visual Design, product design, graphic design, print design, ergonomics... design, user, interface, interaction, color, pattern, visual identity, graphic design, print design, web design, UXD, contemporary art, motion graphic design, typography, photography, literature, ergonomics, storybaord, guidelines, zoning, wireframe, mock-up, layout, prototype, rough... social networking, open source, FreeBSD, Mac OSX, WaSP, HTML5, W3C... ">
 	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Roboto+Condensed:400,400italic,700|Titillium+Web:400,400italic,600,700' rel='stylesheet' type='text/css">
 
 	<link href="css/master_eponyme.css" media="all" rel="stylesheet" type="text/css">
@@ -49,19 +49,18 @@
 	<!--  test <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
 	<!--  test <script type="text/javascript"src="http://code.google.com/p/css3-mediaqueries-js"></script>-->
 
-	<!--  TODO -->
-	<!--
-	      POESIES III
+
+	<!-- TODO
+	      MASTER JUILLET PROJECT POESIES III
 	      Current project writing and production.
-	      Processing: abstract letters, texts, videos (26)...
-              Digital Cinema
-	      Interaction Design, Motion Graphics, Typography, Literature...
+	      Processing Digital Cinema Industry
+	      Interaction Design, Literature...
 	      -->
 	<!--  TODO CONTENT -->
 	<!--  TODO CONTENT  /Responsive Design + compass @import "compass/css3, typography"..., animation, content vimeo... -->
-	<!--  TODO CONTENT  literature, ilustration vector and animation CSS3 -->
-	<!--  TODO CONTENT  color graphic experience video background motion graphics -->
-        <!--  TODO CONTENT  digital Cinema (RED, ZEISS, COOKE, APPLE, NEUMANN, ZOOM, APUTURE) -->
+	<!--  TODO CONTENT  literature, cinéma, ilustration vector and animation CSS3 -->
+	<!--  TODO CONTENT  color graphic experience background flim -->
+  <!--  TODO CONTENT  digital Cinema (RED, ZEISS, COOKE, APPLE, NEUMANN, ZOOM, APUTURE) -->
 
 <body class="chain chain-down full-width-content" role="document">
 	<section id="block-video">
@@ -127,7 +126,7 @@
 			<figure>
 				<p><img src="images/writings.svg" alt="Writings"></p>
                                 <p>Current project writing and production</p>
-				<p><a href="https://f.io/NPpIoZL9" rel="external"><br />f.io/NPpIoZL9</a></p>
+				<p><a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
 			</figure>
 
 			<aside id="press">
@@ -185,17 +184,21 @@
 <section id="s-sign">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-	      <figure><h1>01</h1></figure>
+	  <figure>
+          <h1>01</h1>
+    </figure>
 	      <article>
-			       <h2>01</h2>
+			    <h2>01</h2>
 	      </article>
-        </aside>
+      </aside>
 
    <aside id="sec-s-sign" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
-     <figure><h1>01</h1></figure>
-     <article>
-          <h2>01</h2>
+     <figure>
+       <h1>01</h1>
+     </figure>
+      <article>
+      <h2>01</h2>
      </article>
 
         <article role="article" id="desc-s-sign" class="text">
@@ -218,18 +221,22 @@
 <section id="s-text" class="tab_content">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-        <figure><h1>02</h1></figure>
-        <article>
-             <h2>02</h2>
-        </article>
-	    </aside>
+        <figure>
+              <h1>02</h1>
+        </figure>
+            <article>
+              <h2>02</h2>
+            </article>
+          </aside>
 
       <aside id="sec-s-text" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
-        <figure><h1>02</h1></figure>
- 	      <article>
- 			       <h2>02</h2>
- 	      </article>
+        <figure>
+          <h1>02</h1>
+        </figure>
+         <article>
+         <h2>02</h2>
+        </article>
 
         <article role="article" id="desc-s-sign" class="text">
             <h3>master juillet</h3>
@@ -251,17 +258,22 @@
 <section id="s-liter"  class="tab_content">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-	     <figure><h1>03</h1></figure>
-	     <article>
-			    <h2>03</h2>
-	     </article>
-   </aside>
+        <figure>
+              <h1>03</h1>
+        </figure>
+            <article>
+              <h2>03</h2>
+            </article>
+          </aside>
+
 
       <aside id="sec-s-liter" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
-        <figure><h1>03</h1></figure>
-        <article>
-             <h2>03</h2>
+        <figure>
+          <h1>03</h1>
+        </figure>
+         <article>
+         <h2>03</h2>
         </article>
 
         <article role="article" id="desc-s-sign" class="text">
@@ -284,17 +296,21 @@
 <section id="s-video"  class="tab_content">
 	  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-	 <figure><h1>04</h1></figure>
-	<article>
-			<h2>04</h2>
-	</article>
-	</aside>
+      <figure>e
+            <h1>04</h1>
+      </figure>
+          <article>
+            <h2>04</h2>
+          </article>
+        </aside>
 
   <aside id="sec-s-video" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
-    <figure><h1>04</h1></figure>
-    <article>
-         <h2>04</h2>
+    <figure>
+      <h1>04</h1>
+    </figure>
+     <article>
+     <h2>04</h2>
     </article>
 
     <article role="article" id="desc-s-sign" class="text">
