--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if IE 7 ]> <html class="ie ie7"> <![endif]-->
 <!--[if IE 8 ]> <html class="ie ie8"> <![endif]-->
@@ -174,8 +173,8 @@
 			</a></li>
 			<li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">text</a>
 				<a href="#content" id="texts" class="texts">text</a></li>
-			<li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">liter</a>
-				<a href="#s-liter" id="liters" class="liters">liter</a></li>
+			<li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">sons</a>
+				<a href="#s-liter" id="liters" class="liters">sons</a></li>
 			<li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">film</a>
 				<a href="#s-video" id="vids" class="vids">film</a></li>
 		</ul>
