--- a/index.html
+++ b/index.html
@@ -215,6 +215,32 @@
              </p>
          </article>
 	</aside>
+  <section id="s-signA">
+  	    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
+
+  	  <figure>
+            <h1>11</h1>
+      </figure>
+  	      <article>
+  			    <h2>11</h2>
+  	      <article>
+            <div><img class="tempoA" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+        </aside>
+
+   <aside id="sec-s-sign" class="page">
+
+       <figure>
+           <h1>11</h1>
+       </figure>
+        <article>
+           <h2>11</h2>
+       </article>
+
+      <article role="article" id="desc-s-sign" class="text"></article>
+     <article role="article" class="blanc"></article>
+  	</aside>
+  </section>
+  
 </section>
 
 <section id="s-text" class="tab_content">
