--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
      </article>
 
         <article role="article" id="desc-s-sign" class="text">
-            <h3>master juillet</h3>
+            <h3>master juillet project - r3d, dcp... </h3>
             <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
             </p>
             <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
@@ -224,7 +224,9 @@
   	      <article>
   			    <h2>11</h2>
   	      <article>
-            <div><img class="tempoA" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+            <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>
+            <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+
         </aside>
 
    <aside id="sec-s-sign" class="page">
@@ -240,7 +242,7 @@
      <article role="article" class="blanc"></article>
   	</aside>
   </section>
-  
+
 </section>
 
 <section id="s-text" class="tab_content">
