--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
 	  <figure>
-          <h1>01</h1>
+          <h1>00</h1>
     </figure>
 	      <article>
-			    <h2>01</h2>
+			    <h2>00</h2>
 	      </article>
       </aside>
 
@@ -220,10 +220,10 @@
   	    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
 
   	  <figure>
-            <h1>11</h1>
+            <h1>02</h1>
       </figure>
   	      <article>
-  			    <h2>11</h2>
+  			    <h2>02</h2>
   	      <article>
             <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>
             <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
@@ -233,10 +233,10 @@
    <aside id="sec-s-sign" class="page">
 
        <figure>
-           <h1>11</h1>
+           <h1>02</h1>
        </figure>
         <article>
-           <h2>11</h2>
+           <h2>02</h2>
        </article>
 
       <article role="article" id="desc-s-sign" class="text"></article>
@@ -250,20 +250,20 @@
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
         <figure>
-              <h1>02</h1>
+              <h1>1.2</h1>
         </figure>
             <article>
-              <h2>02</h2>
+              <h2>1.2</h2>
             </article>
           </aside>
 
       <aside id="sec-s-text" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
         <figure>
-          <h1>02</h1>
+          <h1>1.2</h1>
         </figure>
          <article>
-         <h2>02</h2>
+         <h2>1.2</h2>
         </article>
 
         <article role="article" id="desc-s-sign" class="text">
@@ -287,10 +287,10 @@
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
         <figure>
-              <h1>03</h1>
+              <h1>1.3</h1>
         </figure>
             <article>
-              <h2>03</h2>
+              <h2>1.3</h2>
             </article>
           </aside>
 
@@ -298,10 +298,10 @@
       <aside id="sec-s-liter" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
         <figure>
-          <h1>03</h1>
+          <h1>1.3</h1>
         </figure>
          <article>
-         <h2>03</h2>
+         <h2>1.3</h2>
         </article>
 
         <article role="article" id="desc-s-sign" class="text">
@@ -324,21 +324,21 @@
 <section id="s-video"  class="tab_content">
 	  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-      <figure>e
-            <h1>04</h1>
+      <figure>
+            <h1>1.4</h1>
       </figure>
           <article>
-            <h2>04</h2>
+            <h2>1.4</h2>
           </article>
         </aside>
 
   <aside id="sec-s-video" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
 
     <figure>
-      <h1>04</h1>
+      <h1>1.4</h1>
     </figure>
      <article>
-     <h2>04</h2>
+     <h2>1.4</h2>
     </article>
 
     <article role="article" id="desc-s-sign" class="text">
