--- a/index.html
+++ b/index.html
@@ -184,7 +184,6 @@
 <section id="s-sign">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-
       </aside>
  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
@@ -195,18 +194,18 @@
  			    <h2>00</h2>
  	      </article>
             	<!--  <p><img class="motif" src="../images/bg-sign.png" alt="Sun"></p>-->
-       </aside>
 
+<!--
        <article role="article" id="desc-s-sign" class="text">
            <h3>master juillet project - r3d, dcp... </h3>
            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
            </p>
            <h3>rushes</h3>
-           <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
+           <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>-->
        </article>
      </aside>
     </aside>
-   <aside id="sec-s-sign" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+   <aside id="sec-s-sign" class="page"><div><!--<img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun">--></div>
 
      <figure>
        <h1>01</h1>
@@ -220,7 +219,7 @@
             <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
             </p>
             <h3>rushes</h3>
-            <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
+            <p><!--<img class="motif" src="images/motif.jpg" alt="Sun">--></p>
         </article>
          <article role="article" class="blanc">
              <h4>master juillet project 23/25</h4>
@@ -240,7 +239,7 @@
   	      <article>
   			    <h2>02</h2>
   	      <article>
-            <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>
+            <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
             <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
 
         </aside>
@@ -262,104 +261,199 @@
 </section>
 
 <section id="s-text" class="tab_content">
-	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-        <figure>
-              <h1>1.2</h1>
-        </figure>
-            <article>
-              <h2>1.2</h2>
-            </article>
-          </aside>
+  </aside>
+<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-      <aside id="sec-s-text" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+ <figure>
+       <h1>1.2</h1>
+ </figure>
+    <article>
+      <h2>1.2</h2>
+    </article>
+          <!--  <p><img class="motif" src="../images/bg-sign.png" alt="Sun"></p>-->
 
-        <figure>
-          <h1>1.2</h1>
-        </figure>
-         <article>
-         <h2>1.2</h2>
-        </article>
+<!--
+   <article role="article" id="desc-s-sign" class="text">
+       <h3>master juillet project - r3d, dcp... </h3>
+       <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
+       </p>
+       <h3>rushes</h3>
+       <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>-->
+   </article>
+ </aside>
+</aside>
+<aside id="sec-s-sign" class="page"><div><!--<img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun">--></div>
 
-        <article role="article" id="desc-s-sign" class="text">
-            <h3>master juillet</h3>
-            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
-            </p>
-            <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
-        </article>
-         <article role="article" class="blanc">
-             <h4>master juillet project 23/25</h4>
-             <p>
-             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
-             </p>
-         </article>
-   </aside>
+ <figure>
+   <h1>1.2</h1>
+ </figure>
+  <article>
+  <h2>1.2</h2>
+ </article>
+
+    <article role="article" id="desc-s-sign" class="text">
+        <h3>master juillet project - r3d, dcp... </h3>
+        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
+        </p>
+        <h3>rushes</h3>
+        <p><!--<img class="motif" src="images/motif.jpg" alt="Sun">--></p>
+    </article>
+     <article role="article" class="blanc">
+         <h4>master juillet project 23/25</h4>
+         <p>
+         <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+         <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+         <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
+         </p>
+     </article>
+</aside>
+<section id="s-signA">
+    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
+
+  <figure>
+        <h1>1.2</h1>
+  </figure>
+      <article>
+        <h2>1.2</h2>
+      <article>
+        <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
+        <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+
+    </aside>
+
+<aside id="sec-s-sign" class="page">
+
+   <figure>
+       <h1>02</h1>
+   </figure>
+    <article>
+       <h2>02</h2>
+   </article>
+
+  <article role="article" id="desc-s-sign" class="text"></article>
+ <article role="article" class="blanc"></article>
+</aside>
+</section>
 </section>
 
 <section id="s-liter"  class="tab_content">
-	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-        <figure>
-              <h1>1.3</h1>
-        </figure>
-            <article>
-              <h2>1.3</h2>
-            </article>
-          </aside>
+  </aside>
+<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
+ <figure>
+       <h1>1.3</h1>
+ </figure>
+    <article>
+      <h2>1.3</h2>
+    </article>
+          <!--  <p><img class="motif" src="../images/bg-sign.png" alt="Sun"></p>-->
 
-      <aside id="sec-s-liter" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+<!--
+   <article role="article" id="desc-s-sign" class="text">
+       <h3>master juillet project - r3d, dcp... </h3>
+       <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
+       </p>
+       <h3>rushes</h3>
+       <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>-->
+   </article>
+ </aside>
+</aside>
+<aside id="sec-s-sign" class="page"><div><!--<img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun">--></div>
 
-        <figure>
-          <h1>1.3</h1>
-        </figure>
-         <article>
-         <h2>1.3</h2>
-        </article>
+ <figure>
+   <h1>1.3</h1>
+ </figure>
+  <article>
+  <h2>1.3</h2>
+ </article>
 
-        <article role="article" id="desc-s-sign" class="text">
-            <h3>master juillet</h3>
-            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
-            </p>
-            <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
-        </article>
-         <article role="article" class="blanc">
-             <h4>master juillet project 23/25</h4>
-             <p>
-             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
-             </p>
-         </article>
-	    </aside>
+    <article role="article" id="desc-s-sign" class="text">
+        <h3>master juillet project - r3d, dcp... </h3>
+        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
+        </p>
+        <h3>rushes</h3>
+        <p><!--<img class="motif" src="images/motif.jpg" alt="Sun">--></p>
+    </article>
+     <article role="article" class="blanc">
+         <h4>master juillet project 23/25</h4>
+         <p>
+         <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
+         <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
+         <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
+         </p>
+     </article>
+</aside>
+<section id="s-signA">
+    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
+
+  <figure>
+        <h1>1.3</h1>
+  </figure>
+      <article>
+        <h2>1.3</h2>
+      <article>
+        <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
+        <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+
+    </aside>
+
+<aside id="sec-s-sign" class="page">
+
+   <figure>
+       <h1>02</h1>
+   </figure>
+    <article>
+       <h2>02</h2>
+   </article>
+
+  <article role="article" id="desc-s-sign" class="text"></article>
+ <article role="article" class="blanc"></article>
+</aside>
+</section>
 </section>
 
 <section id="s-video"  class="tab_content">
-	  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-      <figure>
-            <h1>1.4</h1>
-      </figure>
-          <article>
-            <h2>1.4</h2>
-          </article>
-        </aside>
+  </aside>
+<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
-  <aside id="sec-s-video" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
-
-    <figure>
-      <h1>1.4</h1>
-    </figure>
-     <article>
-     <h2>1.4</h2>
+ <figure>
+       <h1>1.4</h1>
+ </figure>
+    <article>
+      <h2>1.4</h2>
     </article>
+          <!--  <p><img class="motif" src="../images/bg-sign.png" alt="Sun"></p>-->
+
+<!--
+   <article role="article" id="desc-s-sign" class="text">
+       <h3>master juillet project - r3d, dcp... </h3>
+       <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
+       </p>
+       <h3>rushes</h3>
+       <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>-->
+   </article>
+ </aside>
+</aside>
+<aside id="sec-s-sign" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+
+ <figure>
+   <h1>1.4</h1>
+ </figure>
+  <article>
+  <h2>1.4</h2>
+ </article>
 
     <article role="article" id="desc-s-sign" class="text">
-        <h3>master juillet</h3>
-        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker. <br />
+        <h3>master juillet project - r3d, dcp... </h3>
+        <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
         </p>
+        <h3>rushes</h3>
         <p><img class="motif" src="images/motif.jpg" alt="Sun"></p>
     </article>
      <article role="article" class="blanc">
@@ -370,7 +464,34 @@
          <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
          </p>
      </article>
-	</aside>
+</aside>
+<section id="s-signA">
+    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
+
+  <figure>
+        <h1>1.4</h1>
+  </figure>
+      <article>
+        <h2>1.4</h2>
+      <article>
+        <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
+        <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+
+    </aside>
+
+<aside id="sec-s-sign" class="page">
+
+   <figure>
+       <h1>02</h1>
+   </figure>
+    <article>
+       <h2>02</h2>
+   </article>
+
+  <article role="article" id="desc-s-sign" class="text"></article>
+ <article role="article" class="blanc"></article>
+</aside>
+</section>
 </section>
 
 	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
