--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   			    <h2>02</h2>
   	      <article>
             <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
-            <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+            <article role="article" id="desc-s-sign" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
 
         </aside>
 
@@ -309,8 +309,8 @@
          </p>
      </article>
 </aside>
-<section id="s-signA">
-    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
+<section id="s-signB">
+    <aside class="pageB"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
 
   <figure>
         <h1>1.2</h1>
@@ -319,7 +319,7 @@
         <h2>1.2</h2>
       <article>
         <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
-        <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+        <article role="article" id="desc-s-sign" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
 
     </aside>
 
@@ -387,8 +387,8 @@
          </p>
      </article>
 </aside>
-<section id="s-signA">
-    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
+<section id="s-signC">
+    <aside class="pageC"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
 
   <figure>
         <h1>1.3</h1>
@@ -397,7 +397,7 @@
         <h2>1.3</h2>
       <article>
         <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
-        <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+        <article role="article" id="desc-s-sign" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
 
     </aside>
 
@@ -465,8 +465,8 @@
          </p>
      </article>
 </aside>
-<section id="s-signA">
-    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
+<section id="s-signD">
+    <aside class="pageD"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
 
   <figure>
         <h1>1.4</h1>
@@ -475,7 +475,7 @@
         <h2>1.4</h2>
       <article>
         <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
-        <article role="article" id="desc-s-signA" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+        <article role="article" id="desc-s-sign" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
 
     </aside>
 
