--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="author" lang="fr" content="signer">
 
-	<title>UXD, Visual, DCI and Interaction Designer - /signer - Paris</title>
+	<title>UXD, Visual, DCI , Writing, Filming, Say and Interaction Designer - /signer - Paris</title>
 
 	<link rel="shortcut icon" href="ico/favicon.ico">
 	<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
