--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="author" lang="fr" content="signer">
 
-	<title>UXD, Visual, DCI , Writing, Filming, Say and Interaction Designer - /signer - Paris</title>
+	<title>UXD, Visual, DCI , Writings, Filming, Say and Interaction Designer - /signer - Paris</title>
 
 	<link rel="shortcut icon" href="ico/favicon.ico">
 	<link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
@@ -154,14 +154,19 @@
 			<ul id="think" class="request">
 				<li><a id="tree" class="tree">Preparatory video</a></li>
 				<li><a id="trees" class="trees">Hide this content</a></li>
-			</ul>
+        <li><img class="rules" src="images/writings.svg" alt="WRITINGS"></li>
+        <li><img class="rules" src="images/filming.svg" alt="FILMING"></li>
+        <li><img class="rules" src="images/say.svg" alt="SAY"></li>
+      </ul>
+
+          <figure>
+            <p class="inners">Current project writing and production  _______ <a class="inners" href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
+
+          </figure>
 		</header>
 
 <section class="inner">
 			<figure>
-				<p><img src="images/writings.svg" alt="WRITINGS"></p><p><img src="images/filming.svg" alt="FILMING"></p><p><img src="images/say.svg" alt="SAY"></p>
-                                <p>Current project writing and production</p>
-				<p><a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
 			</figure>
 
 			<aside id="press">
