--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 
 <section class="inner">
 			<figure>
+         <p><img src="images/MJ2425.svg" alt="master juillet 24/25"></p>
 			</figure>
 
 			<aside id="press">
