--- a/index.html
+++ b/index.html
@@ -222,12 +222,7 @@
             <p><!--<img class="motif" src="images/motif.jpg" alt="Sun">--></p>
         </article>
          <article role="article" class="blanc">
-             <h4>master juillet project 23/25</h4>
-             <p>
-             <a href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a>
-             <a href="https://f.io/hzEiJrcf" rel="external">f.io/hzEiJrcf</a>
-             <a href="https://f.io/c2heW2L_" rel="external">f.io/c2heW2L_</a>
-             </p>
+
          </article>
 	</aside>
   <section id="s-signA">
@@ -239,8 +234,7 @@
   	      <article>
   			    <h2>02</h2>
   	      <article>
-            <!-- <div><img class="tempoA" src="images/8K-MAIN-HLG-100-FE.jpg" alt="Sun"></div>-->
-            <article role="article" id="desc-s-sign" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+            <article role="article" id="desc-s-sign" class="text"></article>
 
         </aside>
 
@@ -297,7 +291,7 @@
       <article>
         <h2>1.2</h2>
       <article>
-        <article role="article" id="desc-s-sign" class="text"><p>DCP ET TEMPLATE<br /> MASTER JUILLET<br />EN COURS...<br />FIN 2024/25 </p></article>
+        <article role="article" id="desc-s-sign" class="text"></article>
 
     </aside>
 
@@ -386,7 +380,7 @@
    </article>
  </aside>
 </aside>
-<aside id="sec-s-sign" class="page"><div><img class="tempo" src="images/8K-MAIN-HLG-100-WB.jpg" alt="Sun"></div>
+<aside id="sec-s-sign" class="page">
 
  <figure>
    <h1>1.4</h1>
