--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </ul>
 
           <figure>
-            <p class="inners">Current project writing and production  _______ <a class="inners" href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
+            <p class="inners">Current project writing and production  :<a class="inners" href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
 
           </figure>
 		</header>
