--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 </section>
 <section id="s-sign">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-
+<div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
       </aside>
  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
@@ -215,11 +215,7 @@
      </article>
 
         <article role="article" id="desc-s-sign" class="text">
-            <h3>master juillet project - r3d, dcp... </h3>
-            <p>Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié.
-            </p>
-            <h3>rushes</h3>
-            <p><!--<img class="motif" src="images/motif.jpg" alt="Sun">--></p>
+          
         </article>
          <article role="article" class="blanc">
 
